--- a/styles/style.css
+++ b/styles/style.css
@@ -97,3 +97,42 @@ main {
 .improvement-list li svg {
 	margin-bottom: -5px;
 }
+
+/* my plan section style */
+
+.my-plans {
+	display: flex;
+	justify-content: space-around;
+}
+
+.my-plan-wrapper {
+	text-align: center;
+}
+
+.my-plan-section-tittle {
+	color:#151414;
+	font-size: 40px;
+	font-weight: 700;
+	text-align: center;
+}
+
+.my-plan-tittle {
+	color: #151414;
+	text-align: center;
+	font-size: 25px;
+	font-weight: 700;
+	margin: 0;
+	margin-bottom: 15px;
+}
+
+.my-plan-thumb {
+	margin-bottom: 25px;
+}
+
+.my-plan-textg {
+	color: #737272;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 500;
+	margin: 0;
+}
