--- a/styles/style.css
+++ b/styles/style.css
@@ -136,3 +136,50 @@ main {
 	font-weight: 500;
 	margin: 0;
 }
+
+/* motivated section style */
+
+.motivated-section {
+	min-height: 300px;
+	background-position: center center;
+	position: relative;
+	margin: 130px 0;
+}
+
+.bg-gradian-shadow {
+	position: absolute;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+}
+
+.motivated-text {
+	color: #FFF;
+	font-size: 40px;
+	font-weight: 700;
+	position: relative;
+	z-index: 9;
+	line-height: 1;
+	margin: 0;
+	margin-bottom: 30px;
+}
+
+.motivated-btn {
+	color: #F15B22;
+	text-align: center;
+	font-size: 20px;
+	font-weight: 600;
+	position: relative;
+	z-index: 9;
+	border-radius: 5px;
+	background: #FFF;
+	text-decoration: none;
+	padding: 20px 35px;
+	display: inline-block;
+}
+
+.motivated-content-box {
+	padding-top: 60px;
+	padding-left: 65px;
+}
